# dst-server-icp

./: .cnb.yml  .gitattributes  .gitignore  AGENTS.md  README.md  agent-plan.md  build-qt.sh  build-release.sh  config.yaml.example  install-dst.sh  make-web.sh  pyproject.toml
.github/workflows/: deploy-docs.yml  release.yml
deploy/: dst-serverd.service
docs/: README.md  about.md  architecture.md  dst-server-setup.md  guide.md  index.md  licenses.md  package-lock.json  package.json  release.md  sponsors.md
docs/.vitepress/: config.mts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  task-queue-context.tsx  theme-context.tsx  theme.ts
frontend/src/api/: client.ts  cookies.ts  endpoints.ts  hooks.ts  types.ts
frontend/src/components/: ActivityDrawer.tsx  AppLayout.tsx  AuthGate.tsx  LogViewer.tsx  StateTag.tsx  TaskQueueDrawer.tsx
frontend/src/hooks/: useLogStream.ts
frontend/src/modules/about/: About.tsx
frontend/src/modules/access/: AccessControl.tsx
frontend/src/modules/backups/: BackupsPanel.tsx
frontend/src/modules/config/: ConfigForm.tsx  ShardPortsForm.tsx
frontend/src/modules/contacts/: ContactsPanel.tsx
frontend/src/modules/dashboard/: Dashboard.tsx
frontend/src/modules/install/: InstallCenter.tsx
frontend/src/modules/instances/: Console.tsx  CreateInstanceModal.tsx  ImportInstanceModal.tsx  InstanceDetail.tsx  InstanceList.tsx
frontend/src/modules/mods/: ModManager.tsx  ModSearchModal.tsx
frontend/src/modules/proxy/: ProxySettings.tsx
frontend/src/modules/settings/: SettingsPage.tsx
gui/: README.md  build.sh  embed.go  go.mod  go.sum  main.go
gui/cmd/core/: main.go
gui/internal/assets/: embed.go  install-dst.sh
gui/internal/config/: config.go
gui/internal/coreio/: coreio.go
gui/internal/deploy/: deploy.go  firewall.go
gui/internal/logx/: logx.go
gui/internal/sshx/: sshx.go
gui/internal/ui/: ui.go
gui/scripts/: install-dst.sh
qt_gui/: CMakeLists.txt  README.md  app.rc  resources.qrc
qt_gui/installer/: portable.nsi  windows.nsi
qt_gui/src/: MainWindow.cpp  MainWindow.h  main.cpp
scripts/: build-bundle.sh  fake_dst.py  fake_steamcmd.sh  install.sh  run.sh  smoke_config.py  smoke_full.py  smoke_import.py  smoke_modupdate.py  smoke_repair.py  smoke_test.py
src/dst_serverd/: __init__.py  activity.py  config.py  db.py  jobs.py  lua.py  main.py  models.py  parse.py  ports.py  proxy.py  render.py
src/dst_serverd/api/: __init__.py  admin.py  deps.py  instances.py  routes.py  ws.py
src/dst_serverd/services/: __init__.py  ai.py  backups.py  contacts.py  importer.py  install.py  instances.py  modconfig.py  modupdate.py  save.py  scheduler.py
src/dst_serverd/supervisor/: __init__.py  fifo.py  logtail.py  manager.py  monitor.py  pidfile.py  process.py  spec.py
