[project]
name = "dst-serverd"
version = "0.2.0"
description = "Don't Starve Together 专用服务器管理后端 —— 单机、无 Docker,Python 直接托管 Shard 进程"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psutil>=6.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
dst-serverd = "dst_serverd.main:run"

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dst_serverd"]

[tool.ruff]
line-length = 100
target-version = "py312"
